adding all the if statment for the dice cases

--- a/dicee.html
+++ b/dicee.html
@@ -42,6 +42,45 @@ function random(){
     dice1.push(num1);
     dice2.push(num2);
     
+    if (num1==1){
+        document.getElementById("img11").src='images/dice1.png';
+    }
+    else if (num1==2){
+        document.getElementById("img11").src="images/dice2.png";
+    }
+    else if (num1==3){
+        document.getElementById("img11").src="images/dice3.png";
+    }
+    else if (num1==4){
+        document.getElementById("img11").src="images/dice4.png";
+    }
+    else if (num1==5){
+        document.getElementById("img11").src="images/dice5.png";
+    }
+    else if (num1==6){
+        document.getElementById("img11").src="images/dice6.png";
+    }
+    if (num2==1){
+        document.getElementById("img22").src="images/dice1.png";
+    }
+    else if (num2==2){
+        document.getElementById("img22").src="images/dice2.png";
+    }
+    else if (num2==3){
+        document.getElementById("img22").src="images/dice3.png";
+    }
+    else if (num2==4){
+        document.getElementById("img22").src="images/dice4.png";
+    }
+    else if (num2==5){
+        document.getElementById("img22").src="images/dice5.png";
+    }
+    else if (num2==6){
+        document.getElementById("img22").src="images/dice6.png";
+    }
+   
+    
+
 } 
 
 
