--- a/dicee.html
+++ b/dicee.html
@@ -91,6 +91,9 @@ function checker(dice1,dice2){
     else if(dice1[0]<dice2[0]){
       txt.innerHTML = "Player 2 WINS";
     }
+    else{
+      txt.innerHTML = "both Winner";
+    }
 
 }
 
