--- a/dicee.html
+++ b/dicee.html
@@ -14,26 +14,24 @@
 
       <div class="dice">
         <p>Player 1</p>
-        <img class="img1" id="img11" src="">
+        <img class="img1" id="img11" src="images/dice5.png">
       </div>
 
       <div class="dice">
         <p>Player 2</p>
-        <img class="img2" id="img22" src="">
+        <img class="img2" id="img22" src="images/dice5.png">
       </div>
 
     </div>
 
     <script>
-      document.querySelectorAll('.container').forEach(item => {
-    item.addEventListener('click', random)});
+      window.addEventListener("load",random)
     var txt=document.getElementById("header");
     dice1 = [];
     dice2 = [];
 
 function random(){
-    document.querySelectorAll('.container').forEach(item => {
-        item.removeEventListener('click', random)});
+    
     var nums = [1, 2, 3, 4, 5, 6 ];
     var randindex1 = Math.floor(Math.random() * nums.length);
     var randindex2 = Math.floor(Math.random() * nums.length);
