adding flag emoji

--- a/dicee.html
+++ b/dicee.html
@@ -84,10 +84,10 @@ function random(){
 } 
 function checker(dice1,dice2){
     if (dice1[0]>dice2[0]){
-      txt.innerHTML = "Player 1 WINS";
+      txt.innerHTML = "<span>&#128681</span> Player 1 WINS";
     }
     else if(dice1[0]<dice2[0]){
-      txt.innerHTML = "Player 2 WINS";
+      txt.innerHTML = "<span>&#128681</span> Player 2 WINS";
     }
     else{
       txt.innerHTML = "both Winner";
